--- a/app/about.html
+++ b/app/about.html
@@ -462,43 +462,32 @@
 				<div class="row">
 					<div class="col-md-3">
 						<h2 class="b-about__title gradient text no_border">ГАРАНТИИ И СЕРТИФИКАТЫ</h2>
-						<p class="b-about__text warrantymoblie margin_top50 margin_bot50">На всю продукцию Метротайл дается письменная гарантия сроком 30 лет. Во избежание подделок требуйте у продавца.</p>
+						<p class="b-about__text margin_top50 margin_bot50">На всю продукцию Метротайл дается письменная гарантия сроком 30 лет. Во избежание подделок требуйте у продавца.</p>
 						<div class="b-about__waranty"></div>
 					</div>
 					<div class="offset-md-1 col-md-8">
-            <div class="counter"></div>
-            <div id="wideslider" class="owl-carousel">
-              <a href="#" class="b-otzyvy__sertificat">
-                <img class="b-otzyvy__sertificat-img" src="img/manual.jpg" alt="manual" />
-              </a>
-              <a href="#" class="b-otzyvy__sertificat">
-                <img class="b-otzyvy__sertificat-img" src="img/manual2.jpg" alt="manual" />
-              </a>
-              <a href="#" class="b-otzyvy__sertificat">
-                <img class="b-otzyvy__sertificat-img" src="img/manual3.jpg" alt="manual" />
-              </a>
-              <a href="#" class="b-otzyvy__sertificat">
-                <img class="b-otzyvy__sertificat-img" src="img/manual4.jpg" alt="manual" />
-              </a>
-              <a href="#" class="b-otzyvy__sertificat">
-                <img class="b-otzyvy__sertificat-img" src="img/manual.jpg" alt="manual" />
-              </a>
-              <a href="#" class="b-otzyvy__sertificat">
-                <img class="b-otzyvy__sertificat-img" src="img/manual2.jpg" alt="manual" />
-              </a>
-              <a href="#" class="b-otzyvy__sertificat">
-                <img class="b-otzyvy__sertificat-img" src="img/manual3.jpg" alt="manual" />
-              </a>
-              <a href="#" class="b-otzyvy__sertificat">
-                <img class="b-otzyvy__sertificat-img" src="img/manual4.jpg" alt="manual" />
-              </a>
-              <a href="#" class="b-otzyvy__sertificat">
-                <img class="b-otzyvy__sertificat-img" src="img/manual.jpg" alt="manual" />
-              </a>
-              <a href="#" class="b-otzyvy__sertificat">
-                <img class="b-otzyvy__sertificat-img" src="img/manual2.jpg" alt="manual" />
-              </a>
-              </div>
+						<div class="row">
+						<div class="col-md-4">
+							<a href="#" class="b-about__sertificat">
+								<img class="b-about__sertificat-img" src="img/manual.jpg" alt="manual" />
+								<a class="b-about__sertificat-link" href="#">Гарантийный талон</a>
+							</a>
+							
+						</div>
+						<div class="col-md-4">
+							<a href="#" class="b-about__sertificat">
+								<img class="b-about__sertificat-img" src="img/manual2.jpg" alt="manual" />
+								<a class="b-about__sertificat-link" href="#">Сертификат пожарной безопасности</a>
+							</a>
+						</div>
+						<div class="col-md-4">
+							<a href="#" class="b-about__sertificat">
+								<img class="b-about__sertificat-img" src="img/manual3.jpg" alt="manual" />
+								<a class="b-about__sertificat-link" href="#">Сертификат соответствия продукции требованиям нормативных документов ГОСТ</a>
+							</a>
+						</div>
+							
+						</div>
 					</div>
 				</div>
 		</div>
