--- a/app/calc3.html
+++ b/app/calc3.html
@@ -449,7 +449,7 @@
 	<div class="container-flued">
 		<div class="row">
 			<div class="col-12">
-			<div class="b-topbanner display-sm-none" style="background-image: url(/img/banner.png);">
+			<div class="b-topbanner" style="background-image: url(/img/banner.png);">
 				<div class="container pos_r">
 					<div class="row">
 					<div class="b-topbanner__text">Расчет композитной черепицы – один из важнейших этапов при покупке композитной кровли. Правильно рассчитанный материал позволит сэкономить Ваши средства и время. Вам не придется ждать новой поставки композитной черепицы, если Вам не хватит каких-либо элементов кровли, в тоже время точный расчет позволит избежать излишков материала,<br> при этом Вы сократите расходы на кровлю. </div>
@@ -471,7 +471,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-12">
-				<h2 class="gradient text no_border display-sm-none">Расчитать кровлю</h2>
+				<h2 class="gradient text no_border">Расчитать кровлю</h2>
 				<div>Зная основные размеры скатов кровли, с помощью кровельного калькулятора Вы сможете узнать ориентировочную стоимость материала, который понадобится Вам для покрытия крыши. Обращаем Ваше внимание на то, что данный расчет композитной черепицы является не окончательным, а примерным!</div>
 			</div>
 		</div>
@@ -485,37 +485,37 @@
 			</div>
 		</div>
 		<div class="row b-calc__sizes">
-			<div class="col-md-2 col-6 b-calc__sizes-container">
+			<div class="col-md-2 b-calc__sizes-container">
 				<div class="b-calc__sizes-title"><label for="square">Площадь<br>кровли</label><span class="b-calc__sizes-important">*</span></div>
 				<div class="b-calc__sizes-inputblock">
 					<input class="b-calc__sizes-input" id="square" placeholder="560" type="text"/>
 				</div>
 			</div>
-			<div class="col-md-2 col-6 b-calc__sizes">
+			<div class="col-md-2 b-calc__sizes">
 				<div class="b-calc__sizes-title"><label for="square2">Длина<br>коньков</label><span class="tooltip"></span></div>
 				<div class="b-calc__sizes-inputblock width">
 					<input class="b-calc__sizes-input" id="square2" placeholder="23" type="text"/>
 				</div>
 			</div>
-			<div class="col-md-2 col-6 b-calc__sizes">
+			<div class="col-md-2 b-calc__sizes">
 				<div class="b-calc__sizes-title"><label for="square3">Длина<br>фронтонов</label><span class="tooltip"></span></div>
 				<div class="b-calc__sizes-inputblock width">
 					<input class="b-calc__sizes-input" id="square3" placeholder="16" type="text"/>
 				</div>
 			</div>
-			<div class="col-md-2 col-6 b-calc__sizes">
+			<div class="col-md-2 b-calc__sizes">
 				<div class="b-calc__sizes-title"><label for="square4">Длина<br>карнизов</label></div>
 				<div class="b-calc__sizes-inputblock width">
 					<input class="b-calc__sizes-input" id="square4" placeholder="78" type="text"/>
 				</div>
 			</div>
-			<div class="col-md-2 col-6 b-calc__sizes">
+			<div class="col-md-2 b-calc__sizes">
 				<div class="b-calc__sizes-title"><label for="square5">Длина<br>ендов</label><span class="tooltip"></span></div>
 				<div class="b-calc__sizes-inputblock width">
 					<input class="b-calc__sizes-input" id="square5" placeholder="12" type="text"/>
 				</div>
 			</div>
-			<div class="col-md-2 col-6 b-calc__sizes">
+			<div class="col-md-2 b-calc__sizes">
 				<div class="b-calc__sizes-title"><label for="square6">Длина<br>примыкания</label><span class="tooltip"></span></div>
 				<div class="b-calc__sizes-inputblock width">
 					<input class="b-calc__sizes-input" id="square6" placeholder="60" type="text"/>
@@ -527,7 +527,7 @@
 				<a href="#" class="b-calc__back">Вернуться к цветам</a>
 			</div>
 			<div class="col-md-6 d-flex justify-content-end">
-				<button class="b-topmenu__favorites-button button buy">рассчитать</button>
+				<button class="button buy">рассчитать</button>
 			</div>
 		</div>
 		<div class="row">
@@ -551,24 +551,22 @@
 						<input class="b-calc__form-input" placeholder="Комментарий" type="text"/>
 						</div>
 						<div class="col-md-3">
-						<button class="b-topmenu__favorites-button button buy">Отправить заявку</button>
+						<button class="button buy">Отправить заявку</button>
 						</div>
 					</div>
 			</form>
 			</div>
 		</div>
-  </div>
-  <div class="container mobilefluid">
-    <div class="row gutter_top margin_bot100">
-        <div class="col-12">
-          <div class="b-midbanner" style="background-image: url(img/calc_banner.png);">
-            <div class="b-midbanner__title row justify-content-center">Где купить</div>
-              <div class="row justify-content-center"><a href="#" class="b-midbanner__button button">Сертифицированные строительные компании</a></div>
 
-          </div>
-        </div>
-    </div>
-  </div>		
+		<div class="row gutter_top margin_bot100">
+				<div class="col-12">
+					<div class="b-midbanner" style="background-image: url(img/calc_banner.png);">
+						<div class="b-midbanner__title row justify-content-center">Где купить</div>
+							<div class="row justify-content-center"><a href="#" class="b-midbanner__button button">Сертифицированные строительные компании</a></div>
+
+					</div>
+				</div>
+		</div>		
 	</div>
 	</section>  <footer class="footer gradient_bg">
     <div class="container">
