--- a/app/calc4.html
+++ b/app/calc4.html
@@ -449,7 +449,7 @@
 	<div class="container-flued">
 		<div class="row">
 			<div class="col-12">
-			<div class="b-topbanner display-sm-none" style="background-image: url(/img/banner.png);">
+			<div class="b-topbanner" style="background-image: url(/img/banner.png);">
 				<div class="container pos_r">
 					<div class="row">
 					<div class="b-topbanner__text">Расчет композитной черепицы – один из важнейших этапов при покупке композитной кровли. Правильно рассчитанный материал позволит сэкономить Ваши средства и время. Вам не придется ждать новой поставки композитной черепицы, если Вам не хватит каких-либо элементов кровли, в тоже время точный расчет позволит избежать излишков материала,<br> при этом Вы сократите расходы на кровлю. </div>
@@ -471,7 +471,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-12">
-				<h2 class="gradient text no_border display-sm-none">Расчитать кровлю</h2>
+				<h2 class="gradient text no_border">Расчитать кровлю</h2>
 				<div>Зная основные размеры скатов кровли, с помощью кровельного калькулятора Вы сможете узнать ориентировочную стоимость материала, который понадобится Вам для покрытия крыши. Обращаем Ваше внимание на то, что данный расчет композитной черепицы является не окончательным, а примерным!</div>
 			</div>
 		</div>
@@ -488,7 +488,7 @@
 			<div class="col-md-6">
 					<span class="b-calc__price-title">Ориентировочная стоимость:<span class="b-calc__price-tooltip tooltip"></span></span><span class="b-calc__price-total gradient text no_border">537 600 <span class="ruble">₽</span></span>
 			</div>
-			<div class="col-md-6 d-sm-flex justify-content-sm-end align-items-center">
+			<div class="col-md-6 d-flex justify-content-end align-items-center">
 				<a href="#" class="b-calc__price-link blue_link">Отправить расчёт на e-mail</a>
 				<button class="b-calc__price-button button buy">рассчитать</button>
 			</div>
@@ -514,14 +514,13 @@
 						<input class="b-calc__form-input" placeholder="Комментарий" type="text"/>
 						</div>
 						<div class="col-md-3">
-						<button class="b-topmenu-mobile__button button buy">Отправить заявку</button>
+						<button class="button buy">Отправить заявку</button>
 						</div>
 					</div>
 			</form>
 			</div>
-    </div>
 		</div>
-<div class="container mobilefluid">
+
 		<div class="row gutter_top margin_bot100">
 				<div class="col-12">
 					<div class="b-midbanner" style="background-image: url(img/calc_banner.png);">
@@ -531,7 +530,7 @@
 					</div>
 				</div>
 		</div>		
-</div>
+	</div>
 	</section>
 
   <footer class="footer gradient_bg">
