--- a/app/catalog_spisok_tovarov.html
+++ b/app/catalog_spisok_tovarov.html
@@ -720,7 +720,7 @@
 		</div>
 		<div class="row b-links">
 			<div class="col-12">
-				<div class="d-flex">
+				<div class="d-md-flex">
 					<div class="b-links__block no_icon" style="background-image: url(/img/links_block.png);">
 						<a class="b-links__link" href="#"></a>
 						<span class="b-links__title">где купить</span>
@@ -742,7 +742,7 @@
 						Инструкции<br> по монтажу
 					</div>
 				</div>
-				<div class="d-flex">
+				<div class="d-md-flex">
 					<div class="b-links__block icon icon3">
 						<a class="b-links__link" href="#"></a>
 						<span class="b-links__title">Акции</span>
@@ -764,7 +764,7 @@
 						<span class="b-links__title">Новости</span>
 					</div>
 				</div>
-				<div class="d-flex">
+				<div class="d-md-flex">
 					<div class="b-links__block no_icon" style="background-image: url(img/links_block6.png);">
 						<a class="b-links__link" href="#"></a>
 						мы в соцсетях
