--- a/app/index.html
+++ b/app/index.html
@@ -661,7 +661,7 @@
 				<div class="col-12">
 					<div class="b-midbanner">
 						<div class="row justify-content-center b-midbanner__title">Профессиональный монтаж композитной кровли</div>
-						<div class="row justify-content-center"><a href="#" class="b-midbanner__button button gradient">Наши предложения</a></div>
+						<div class="row justify-content-center"><a href="#" class="b-midbanner__button button">Наши предложения</a></div>
 					</div>
 				</div>
 			</div>
