--- a/app/manual-shef-montaz.html
+++ b/app/manual-shef-montaz.html
@@ -451,7 +451,9 @@
 			<div class="col-12">
 				Одним из приоритетных направлений деятельности компании Metrotile является обучение монтажников. Обучение предусматривает проведение семинаров, тренингов и мастер-классов. В процессе обучения мы знакомим Вас с приемами монтажа и инструментом, используемым при укладке черепицы Metrotile.
 			</div>
-		</div>
+    </div>
+	</div>
+  <div class="container mobilefluid">
 		<div class="row">
 			<div class="col-12">
 				<div class="b-manualshef__container gradient_bg">
@@ -461,6 +463,8 @@
 				</div>
 			</div>
 		</div>
+  </div>
+  <div class="container mobilefluid">
 		<div class="row">
 			<div class="col-12">
 				<div class="b-manualshef__banner" style="background-image: url(/img/manualshef__banner.jpg);">
@@ -470,7 +474,7 @@
 		</div>
 		<div class="row">
 			<div class="col-12">
-				<a href="#" class="blue_link with_arrow">Вернуться в раздел</a>
+				<a href="#" class="blue_link with_arrow bottom">Вернуться в раздел</a>
 			</div>
 		</div>
 	</div>	
