--- a/app/manual.html
+++ b/app/manual.html
@@ -514,7 +514,7 @@
 	<div class="b-links__wrapper container">
 			<div class="row">
 				<div class="col-12">
-					<div class="d-flex">
+					<div class="d-md-flex">
 						<div class="b-links__block no_icon" style="background-image: url(/img/links_block.png);">
 							<a class="b-links__link" href="#"></a>
 							<span class="b-links__title">где купить</span>
