--- a/app/mount.html
+++ b/app/mount.html
@@ -583,54 +583,77 @@
 					</div>
 				</div>
 			</div>
-			<div class="row b-links">
-				<div class="col-12">
-					<div class="d-flex">
-						<div class="b-links__block no_icon" style="background-image: url(img/links_block.png);">
-							<a class="b-links__link" href="#"></a>
-							<span class="b-links__title">где купить</span>
-						</div>
-						<div class="b-links__block icon icon1">
-							<a class="b-links__link" href="#"></a>
-							<span class="b-links__title">расчет<br>кровли</span>
-						</div>
-						<div class="b-links__block no_icon" style="background-image: url(img/links_block2.png);">
-							<a class="b-links__link" href="#"></a>
-							Инструкции<br> по монтажу<br>Metrotile
-						</div>
-						<div class="b-links__block icon icon2">
-							<a class="b-links__link" href="#"></a>
-							<span class="b-links__title">Учебное видео</span>
-						</div>
-						<div class="b-links__block no_icon" style="background-image: url(img/links_block3.png);">
-							<a class="b-links__link" href="#"></a>
-							Инструкции<br> по монтажу
-						</div>
-					</div>
-					<div class="d-flex">
-						<div class="b-links__block icon icon8">
-							<a class="b-links__link" href="#"></a>
-							<span class="b-links__title">Новости учебного центра</span>
-						</div>
-						<div class="b-links__block no_icon" style="background-image: url(img/links_block9.png);">
-							<a class="b-links__link" href="#"></a>
-							Шеф-монтаж
-						</div>
-						<div class="b-links__block icon icon5">
-							<a class="b-links__link" href="#"></a>
-							<span class="b-links__title">Новости</span>
-						</div>
-						<div class="b-links__block no_icon" style="background-image: url(img/links_block6.png);">
-							<a class="b-links__link" href="#"></a>
-							мы в соцсетях
-						</div>
-						<div class="b-links__block icon icon9">
-							<a class="b-links__link" href="#"></a>
-							<span class="b-links__title">Доставка</span>
-						</div>
-					</div>
-				</div>
-			</div>
+    <div class="row b-links">
+      <div class="col-12">
+        <div class="d-md-flex">
+          <div class="b-links__block no_icon" style="background-image: url(/img/links_block.png);">
+            <a class="b-links__link" href="#"></a>
+            <span class="b-links__title">где купить</span>
+          </div>
+          <div class="b-links__block icon icon1">
+            <a class="b-links__link" href="#"></a>
+            <span class="b-links__title">расчет<br>кровли</span>
+          </div>
+          <div class="b-links__block no_icon" style="background-image: url(img/links_block2.png);">
+            <a class="b-links__link" href="#"></a>
+            МОнтаж
+          </div>
+          <div class="b-links__block icon icon2">
+            <a class="b-links__link" href="#"></a>
+            <span class="b-links__title">видео</span>
+          </div>
+          <div class="b-links__block no_icon" style="background-image: url(img/links_block3.png);">
+            <a class="b-links__link" href="#"></a>
+            Инструкции<br> по монтажу
+          </div>
+        </div>
+        <div class="d-md-flex">
+          <div class="b-links__block icon icon3">
+            <a class="b-links__link" href="#"></a>
+            <span class="b-links__title">Акции</span>
+          </div>
+          <div class="b-links__block no_icon" style="background-image: url(img/links_block4.png);">
+            <a class="b-links__link" href="#"></a>
+            Преимущества
+          </div>
+          <div class="b-links__block icon icon4">
+            <a class="b-links__link" href="#"></a>
+            <span class="b-links__title">Фото-<br>галерея</span>
+          </div>
+          <div class="b-links__block no_icon" style="background-image: url(img/links_block5.png);">
+            <a class="b-links__link" href="#"></a>
+            Это интересно
+          </div>
+          <div class="b-links__block icon icon5">
+            <a class="b-links__link" href="#"></a>
+            <span class="b-links__title">Новости</span>
+          </div>
+        </div>
+        <div class="d-md-flex">
+          <div class="b-links__block no_icon" style="background-image: url(img/links_block6.png);">
+            <a class="b-links__link" href="#"></a>
+            мы в соцсетях
+          </div>
+          <div class="b-links__block icon icon6">
+            <a class="b-links__link" href="#"></a>
+            <span class="b-links__title">Производство</span>
+          </div>
+          <div class="b-links__block no_icon" style="background-image: url(img/links_block7.png);">
+            <a class="b-links__link" href="#"></a>
+            Архитекторам
+          </div>
+          <div class="b-links__block icon icon7">
+            <a class="b-links__link" href="#"></a>
+            <span class="b-links__title">Технология</span>
+          </div>
+          <div class="b-links__block no_icon" style="background-image: url(img/links_block8.png);">
+            <a class="b-links__link" href="#"></a>
+            История
+          </div>
+        </div>
+        
+      </div>
+    </div>
 			<div class="row">
 				<div class="col-12">
 					<h2 class="gradient text no_border">Профессиональный монтаж композитной кровли во всех регионах России</h2>
@@ -647,7 +670,7 @@
 					<h3>В каждом дилерском центре можно получить комплекс профессиональных услуг по монтажу композитной кровли:</h3>
 					<p>Высокое качество материала позволяет, при необходимости, гнуть листы и делать фальц без разрушения верхнего слоя гранулята.</p>
 					<p>Для работы со строителями компания Metrotile разработала специальную программу сотрудничества в которая предусматривает:</p>
-					<ul>
+					<ul class="diamond">
 						<li>Вызов специалиста для обмера объекта и расчета необходимого количества материала;</li>
 						<li>Детальную смету, в которой будут указаны применяемые основные и расходные материалы, а так же стоимость монтажа композитной черепицы; </li>
 						<li>Приобрести сертифицированную продукцию в строгом соответствии с проектно-технической документацией и рассчитанной сметой;</li>
