--- a/app/news.html
+++ b/app/news.html
@@ -557,7 +557,7 @@
 				</div>
 				<div class="row">
 					<div class="col-12 d-flex justify-content-center margin_top100 margin_bot100">
-						<button class="button buy accept">Загрузить Ещё</button>
+						<button class="b-topmenu-mobile__button button buy accept">Загрузить Ещё</button>
 					</div>
 				</div>
 			</div>
