--- a/app/calc1.html
+++ b/app/calc1.html
@@ -449,7 +449,7 @@
 	<div class="container-flued">
 		<div class="row">
 			<div class="col-12">
-			<div class="b-topbanner display-sm-none" style="background-image: url(/img/banner.png);">
+			<div class="b-topbanner" style="background-image: url(/img/banner.png);">
 				<div class="container pos_r">
 					<div class="row">
 					<div class="b-topbanner__text">Расчет композитной черепицы – один из важнейших этапов при покупке композитной кровли. Правильно рассчитанный материал позволит сэкономить Ваши средства и время. Вам не придется ждать новой поставки композитной черепицы, если Вам не хватит каких-либо элементов кровли, в тоже время точный расчет позволит избежать излишков материала,<br> при этом Вы сократите расходы на кровлю. </div>
@@ -471,7 +471,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-12">
-				<h2 class="gradient text no_border display-sm-none">Расчитать кровлю</h2>
+				<h2 class="gradient text no_border">Расчитать кровлю</h2>
 				<div>Зная основные размеры скатов кровли, с помощью кровельного калькулятора Вы сможете узнать ориентировочную стоимость материала, который понадобится Вам для покрытия крыши. Обращаем Ваше внимание на то, что данный расчет композитной черепицы является не окончательным, а примерным!</div>
 			</div>
 		</div>
@@ -485,38 +485,38 @@
 			</div>
 		</div>
 		<div class="row b-calc__item">
-			<div class="col-md-2 col-6">
+			<div class="col-md-2">
 				<a href="#" class="b-calc__item-img active">
 					<img class="b-calc__item-imgelement" src="img/calc_roof.png" alt="calc_roof">
 				</a>
 				<a href="#" class="b-calc__item-link">MetroBond</a>
 			</div>
-			<div class="col-md-2 col-6">
+			<div class="col-2">
 				<a href="#" class="b-calc__item-img">
 					<span class="gradient newitem">новинка</span>
 					<img class="b-calc__item-imgelement" src="img/calc_roof.png" alt="calc_roof">
 				</a>
 				<a href="#" class="b-calc__item-link">MetroRoman</a>
 			</div>
-			<div class="col-md-2 col-6">
+			<div class="col-2">
 				<a href="#" class="b-calc__item-img">
 					<img class="b-calc__item-imgelement" src="img/calc_roof.png" alt="calc_roof">
 				</a>
 				<a href="#" class="b-calc__item-link">Metrotile Mistral</a>
 			</div>
-			<div class="col-md-2 col-6">
+			<div class="col-2">
 				<a href="#" class="b-calc__item-img">
 					<img class="b-calc__item-imgelement" src="img/calc_roof.png" alt="calc_roof">
 				</a>
 				<a href="#" class="b-calc__item-link">MetroShake II</a>
 			</div>
-			<div class="col-md-2 col-6">
+			<div class="col-2">
 				<a href="#" class="b-calc__item-img">
 					<img class="b-calc__item-imgelement" src="img/calc_roof.png" alt="calc_roof">
 				</a>
 				<a href="#" class="b-calc__item-link">MetroClassic</a>
 			</div>
-			<div class="col-md-2 col-6">
+			<div class="col-2">
 				<a href="#" class="b-calc__item-img">
 					<img class="b-calc__item-imgelement" src="img/calc_roof.png" alt="calc_roof">
 				</a>
@@ -524,38 +524,38 @@
 			</div>
 		</div>
 		<div class="row b-calc__item">
-			<div class="col-md-2 col-6">
+			<div class="col-md-2">
 				<a href="#" class="b-calc__item-img">
 					<img class="b-calc__item-imgelement" src="img/calc_roof.png" alt="calc_roof">
 				</a>
 				<a href="#" class="b-calc__item-link">MetroBond</a>
 			</div>
-			<div class="col-md-2 col-6">
+			<div class="col-2">
 				<a href="#" class="b-calc__item-img">
 					<span class="gradient newitem">новинка</span>
 					<img class="b-calc__item-imgelement" src="img/calc_roof.png" alt="calc_roof">
 				</a>
 				<a href="#" class="b-calc__item-link">MetroRoman</a>
 			</div>
-			<div class="col-md-2 col-6">
+			<div class="col-2">
 				<a href="#" class="b-calc__item-img">
 					<img class="b-calc__item-imgelement" src="img/calc_roof.png" alt="calc_roof">
 				</a>
 				<a href="#" class="b-calc__item-link">Metrotile Mistral</a>
 			</div>
-			<div class="col-md-2 col-6">
+			<div class="col-2">
 				<a href="#" class="b-calc__item-img">
 					<img class="b-calc__item-imgelement" src="img/calc_roof.png" alt="calc_roof">
 				</a>
 				<a href="#" class="b-calc__item-link">MetroShake II</a>
 			</div>
-			<div class="col-md-2 col-6">
+			<div class="col-2">
 				<a href="#" class="b-calc__item-img">
 					<img class="b-calc__item-imgelement" src="img/calc_roof.png" alt="calc_roof">
 				</a>
 				<a href="#" class="b-calc__item-link">MetroClassic</a>
 			</div>
-			<div class="col-md-2 col-6">
+			<div class="col-2">
 				<a href="#" class="b-calc__item-img">
 					<img class="b-calc__item-imgelement" src="img/calc_roof.png" alt="calc_roof">
 				</a>
@@ -567,7 +567,7 @@
 				<a href="#" class="b-calc__back"></a>
 			</div>
 			<div class="col-md-6 d-flex justify-content-end">
-				<button class="b-calc__form-button button buy">перейти к выбору цвета</button>
+				<button class="button buy">перейти к выбору цвета</button>
 			</div>
 		</div>
 		<div class="row">
@@ -591,24 +591,23 @@
 						<input class="b-calc__form-input" placeholder="Комментарий" type="text"/>
 						</div>
 						<div class="col-md-3">
-						<button class="b-calc__form-button button buy">Отправить заявку</button>
+						<button class="button buy">Отправить заявку</button>
 						</div>
 					</div>
 			</form>
 			</div>
 		</div>
-	
+
+		<div class="row gutter_top margin_bot100">
+				<div class="col-12">
+					<div class="b-midbanner" style="background-image: url(img/calc_banner.png);">
+						<div class="b-midbanner__title row justify-content-center">Где купить</div>
+							<div class="row justify-content-center"><a href="#" class="b-midbanner__button button">Сертифицированные строительные компании</a></div>
+
+					</div>
+				</div>
+		</div>		
 	</div>
-  <div class="container mobilefluid">
-    <div class="row gutter_top margin_bot100">
-        <div class="col-12">
-          <div class="b-midbanner" style="background-image: url(img/calc_banner.png);">
-            <div class="b-midbanner__title row justify-content-center">Где купить</div>
-              <div class="row justify-content-center"><a href="#" class="b-midbanner__button button">Сертифицированные строительные компании</a></div>
-          </div>
-        </div>
-    </div> 
-  </div> 
 	</section>
   <footer class="footer gradient_bg">
     <div class="container">
