--- a/app/cart.html
+++ b/app/cart.html
@@ -442,19 +442,17 @@
   				<li>Корзина</li>
 			</ul> 
 		</div>
-		<div class="row pos_r">
-      <div class="col-12 d-md-flex justify-content-md-center">
-        <a href="#" class="b-cart__back blue_link with_arrow">Вернуться к покупкам</a>
-        <h1 class="gradient text">КОрзина</h1>
-      </div>
+		<div class="row justify-content-center pos_r">
+			<a href="#" class="b-cart__back blue_link with_arrow">Вернуться к покупкам</a>
+			<h1 class="gradient text">КОрзина</h1>
 		</div>
 	</div>
 	<form action="">
 	<div class="container">
 		<div class="row">
 			<div class="col-12">
-							<div class="b-cart__item d-md-flex">
-								<div class="b-cart__item-left d-sm-flex align-items-center">
+							<div class="b-cart__item d-flex">
+								<div class="b-cart__item-left d-flex align-items-center">
 									<div class="b-cart__item-imgblock">
 										<img class="b-cart__item-img" src="img/shop/shop_item.png" alt="cart_item_img">
 									</div>
@@ -465,7 +463,7 @@
 										<div class="b-cart__price-old">1 000 руб.</div>
 										<div class="b-cart__price-cur">890 ₽</div>
 									</div>
-									<div class="b-cart__item-quantity b-shop d-md-flex align-items-center">
+									<div class="b-cart__item-quantity b-shop d-flex align-items-center">
 										<div class="b-shop__quantity clearfix">
 													<div class="b-shop__quantity-minus">-</div>
 													<input class="b-shop__quantity-input" value="1111" type="text"/>
@@ -480,44 +478,44 @@
 			</div>
 		</div>
 		<div class="row">
-      <div class="col-12">
-              <div class="b-cart__item d-md-flex">
-                <div class="b-cart__item-left d-sm-flex align-items-center">
-                  <div class="b-cart__item-imgblock">
-                    <img class="b-cart__item-img" src="img/shop/shop_item.png" alt="cart_item_img">
-                  </div>
-                  <a href="#" class="b-cart__item-link blue_link">Композитная черепица MetroGallo красный</a>
-                </div>
-                <div class="b-cart__item-right d-flex align-items-center">
-                  <div class="b-cart__price">
-                    <div class="b-cart__price-old">1 000 руб.</div>
-                    <div class="b-cart__price-cur">890 ₽</div>
-                  </div>
-                  <div class="b-cart__item-quantity b-shop d-md-flex align-items-center">
-                    <div class="b-shop__quantity clearfix">
-                          <div class="b-shop__quantity-minus">-</div>
-                          <input class="b-shop__quantity-input" value="1111" type="text"/>
-                          <div class="b-shop__quantity-plus">+</div>
-                    </div>
-                    <span >шт</span>
-                  </div>
-                    <div class="b-cart__price-cur">89 000 ₽</div>
-                    <a href="#" class="b-cart__item-del"></a>
-                </div>
-              </div>
-      </div>
+			<div class="col-12">
+							<div class="b-cart__item d-flex">
+								<div class="b-cart__item-left d-flex align-items-center">
+									<div class="b-cart__item-imgblock">
+										<img class="b-cart__item-img" src="img/shop/shop_item.png" alt="cart_item_img">
+									</div>
+									<a href="#" class="b-cart__item-link blue_link">Композитная черепица MetroGallo красный</a>
+								</div>
+								<div class="b-cart__item-right d-flex align-items-center">
+									<div class="b-cart__price">
+										<div class="b-cart__price-old">1 000 руб.</div>
+										<div class="b-cart__price-cur">890 ₽</div>
+									</div>
+									<div class="b-cart__item-quantity b-shop d-flex align-items-center">
+										<div class="b-shop__quantity clearfix">
+													<div class="b-shop__quantity-minus">-</div>
+													<input class="b-shop__quantity-input" value="1111" type="text"/>
+													<div class="b-shop__quantity-plus">+</div>
+										</div>
+										<span >шт</span>
+									</div>
+										<div class="b-cart__price-cur">89 000 ₽</div>
+										<a href="#" class="b-cart__item-del"></a>
+								</div>
+							</div>
+			</div>
 		</div>
 	<div class="row">
 		<div class="col-md-4">
 			<div class="b-cart__agree">Нажимая кнопку «Оформить заказ», я даю свое<br> согласие на обработку персональных данных.</div>
 		</div>
-		<div class="offset-md-5 col-md-3 d-flex justify-content-md-end justify-content-center">
+		<div class="offset-md-5 col-md-3 d-flex justify-content-end">
 			<span class="b-cart__total">Итого к оплате: <span class="b-cart__totalprice">89 576 <span class="ruble">₽</span></span></span>
 		</div>
 	</div>
 	<div class="row">
-		<div class="col-12 d-flex justify-content-md-end justify-content-center">
-		<button class="b-topmenu-mobile__button button buy margin_top_gut margin_bot100">оформить заказ</button></div>
+		<div class="col-12 d-flex justify-content-end">
+		<button class="button buy margin_top_gut margin_bot100">оформить заказ</button></div>
 	</div>
 	</form>
 	</div>
