--- a/app/partners.html
+++ b/app/partners.html
@@ -467,54 +467,44 @@
 					<h2 class="gradient text no_border">Приглашаем к сотрудничеству, уверены оно может быть успешным и взаимовыгодным!</h2>
 				</div>
 			</div>
-			<div class="row">
-				<div class="col-md-4">
-					<h3 class="gradient text">Архитекторам</h3></div>
-				<div class="col-md-4">
-					<h3 class="gradient text">Домо—<br>владельцам</h3></div>
-				<div class="col-md-4">
-					<h3 class="gradient text">Застройщикам</h3></div>
-			</div>
-			<div class="row">
-				<div class="col-md-4">
-					<div class="b-professionals__desc">Приглашаем к сотрудничеству,<br> 
-					уверены оно может быть успешным <br> 
-						и взаимовыгодным!</div>
-				</div>
-				<div class="col-md-4">
-					<div>Выбирайте любое цветовое решение <br> 
-					и купить композитную металлочерепицу, <br> 
-						оставив заявку на нашем сайте.</div>
-				</div>
-				<div class="col-md-4">
-					<div>Высокое качество материалов,<br>   бельгийскаятехнология и выгодные<br>  условия сотрудничества.</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-4">
-					<a class="b-professionals__desc-link" href="#">Сотрудничество</a>
-					<a class="b-professionals__desc-link" href="#">Модели  и текстуры</a>
-				</div>
-				<div class="col-md-4">
-					<a class="b-professionals__desc-link" href="#">монтаж</a>
-					<a class="b-professionals__desc-link" href="#">Расчёт</a>
-				</div>
-				<div class="col-md-4">
-					<a class="b-professionals__desc-link" href="#">Сотрудничество</a>
-					<a class="b-professionals__desc-link" href="#">Условия</a>
-				</div>
-			</div>
+      <div class="row">
+        <div class="col-md-4">
+          <h3 class="gradient text">Архитекторам</h3>
+          <div class="b-professionals__desc">Приглашаем к сотрудничеству,<br> 
+            уверены оно может быть успешным <br> 
+            и взаимовыгодным!
+          </div>
+          <a class="b-professionals__desc-link" href="#">Сотрудничество</a>
+          <a class="b-professionals__desc-link" href="#">Модели  и текстуры</a>
+        </div>
+        <div class="col-md-4">
+          <h3 class="gradient text">Домо—<br>владельцам</h3>
+          <div class="b-professionals__desc">Выбирайте любое цветовое решение <br> 
+          и купить композитную металлочерепицу, <br> 
+          оставив заявку на нашем сайте.
+        </div>
+          <a class="b-professionals__desc-link" href="#">монтаж</a>
+          <a class="b-professionals__desc-link" href="#">Расчёт</a>
+        </div>
+        <div class="col-md-4">
+          <h3 class="gradient text">Застройщикам</h3>
+          <div class="b-professionals__desc">Высокое качество материалов,<br>   бельгийскаятехнология и выгодные<br>  условия сотрудничества.</div>
+          <a class="b-professionals__desc-link" href="#">Сотрудничество</a>
+          <a class="b-professionals__desc-link" href="#">Условия</a>
+        </div>
+      </div>
 		</div>
 			<div class="gradient_bg padding_bot100 padding_top100 margin_top100">
 				<div class="container">
 						<div class="row">
 							<div class="col-md-3">
 								<h2 class="b-about__title gradient text no_border">ГАРАНТИИ И СЕРТИФИКАТЫ</h2>
-								<p class="b-about__text margin_top50 margin_bot50">На всю продукцию Метротайл дается письменная гарантия сроком 30 лет. Во избежание подделок требуйте у продавца.</p>
+								<p class="b-about__text warrantymoblie margin_top50 margin_bot50">На всю продукцию Метротайл дается письменная гарантия сроком 30 лет. Во избежание подделок требуйте у продавца.</p>
 								<div class="b-about__waranty"></div>
 							</div>
 							<div class="offset-md-1 col-md-8">
-								<div class="row">
+              <div class="counter"></div>
+              <div id="otzyvy_slider" class="wideslider owl-carousel">
 								<div class="col-md-4">
 									<a href="#" class="b-about__sertificat">
 										<img class="b-about__sertificat-img" src="img/manual.jpg" alt="manual">
@@ -532,9 +522,9 @@
 									<a href="#" class="b-about__sertificat">
 										<img class="b-about__sertificat-img" src="img/manual3.jpg" alt="manual">
 										</a><a class="b-about__sertificat-link" href="#">Сертификат соответствия продукции требованиям нормативных документов ГОСТ</a>
-									
 								</div>
 									
+                </div>
 								</div>
 							</div>
 						</div>
@@ -790,7 +780,7 @@
 	<div class="b-links__wrapper container">
 			<div class="row">
 				<div class="col-12">
-					<div class="d-flex">
+					<div class="d-md-flex">
 						<div class="b-links__block no_icon" style="background-image: url(/img/links_block.png);">
 							<a class="b-links__link" href="#"></a>
 							<span class="b-links__title">где купить</span>
@@ -813,14 +803,16 @@
 						</div>
 					</div>				
 				</div>
-			</div>
+      </div>
+		</div>
+    <div class="container">
 			<div class="b-seo b-seo__smalltext row">
 				<div class="col-12">
 					<h2 class="gradient text">Партнерство</h2>
 					<p>Для постоянных клиентов, крупных подрядных организаций, строительных компаний и архитектурных бюро постоянно проводятся акции на композитную черепицу. Кроме этого, в компании действуют сезонные и праздничные скидки и предлагается снижение цен на комплексное обслуживание. Также для наших партнеров доступна бесплатная услуга «Шеф Монтаж» - наш сотрудник выезжает на объект клиента и проводит обучение ваших специалистов правильному монтажу композитной черепицы Metrotile. Уточнить действие и расписание акций на композитную черепицу можно у профильных менеджеров и консультантов.</p>
 				</div>
-
 			</div>
+  </div>    
 	</div>		
 	</section>
 
