--- a/app/photo_gallery.html
+++ b/app/photo_gallery.html
@@ -452,7 +452,7 @@
 	<section class="b-gallery">
 		<div class="container">
 			<div class="row no-gutters">
-				<div class="col-md-2">
+				<div class="col-lg-2">
 					<div class="b-collections">
 						<div class="b-collections__navigation">
 							<div class="b-collections__navigation-container">
@@ -480,7 +480,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-md-10">
+				<div class="col-lg-10">
 					<div class="row">
 						<div class="col-md-6">
 							<div class="b-gallery__item">
@@ -537,7 +537,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="b-seo row">
+					<div class="b-seo">
 						<h3 class="gradient text no_border">Фото композитной черепицы Metrotile помогут определиться с выбором кровельного материала</h3>
 						<div class="b-seo__smalltext">При создании своего дома, хочется в итоге получить уникальное архитектурное решение, где все сочетается друг с другом и создает единый и изысканный образ. На представленных фото композитной черепицы Вы сможете посмотреть как черепица различных фактур и цветов будет сочетаться с различными строительными материалами, какие цветовые решения кровли придутся именно по Вашему вкусу. Это позволит избежать композиционных ошибок при закладывании архитектуры здания. Ведь нарисовать в своем воображении будущее строение посильно не каждому человеку. Именно для этого мы создали раздел фотогалереи на нашем сайте и постоянно пополняем его новыми дизайнерскими решениями с использованием композитной черепицы Metrotile.</div>
 					</div>
