--- a/app/press.html
+++ b/app/press.html
@@ -573,7 +573,7 @@
 					<div class="container">
 					<div class="row">
 						<div class="col-12">
-								<h2 class="gradient text">Новости</h2>
+								<h2 class="gradient text">Акции</h2>
 						</div>
 					</div>
 					<div class="row">
