adaptiv_last_beside_tovar

--- a/app/publications.html
+++ b/app/publications.html
@@ -448,7 +448,7 @@
 	</div>
 		<div class="container b-news">
 				<div class="row">
-					<div class="col-md-4">
+					<div class="col-lg-4 col-md-6">
 						<div class="b-news__item">
 							<div class="b-news__img">
 								<img class="b-news__img-element" src="img/publications_img.png" alt="slider_index4">
@@ -459,7 +459,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-4">
+					<div class="col-lg-4 col-md-6">
 						<div class="b-news__item">
 							<div class="b-news__img">
 								<img class="b-news__img-element" src="img/publications_img.png" alt="slider_index4">
@@ -470,7 +470,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-4">
+					<div class="col-lg-4 col-md-6">
 						<div class="b-news__banner" style="background: url(img/slider_index_top.png) no-repeat;">
 							<div class="b-news__desc">
 								<a class="b-news__desc-title">ВОЗМОЖНЫЕ ОШИБКИ ПРИ МОНТАЖЕ ЧЕРЕПИЦЫ METROTILE</a>
@@ -483,7 +483,7 @@
 			<div class="container">
 			<div class="row">
 				<div class="col-12">
-				<div class="b-topbanner banner3" style="background-image: url(img/publications_banner.png);">
+				<div class="b-topbanner b-publications__topbanner" style="background-image: url(img/publications_banner.png);">
 				<div class="b-topbanner__wrapper container">
 						<div class="b-topbanner__container">
 							<div class="b-topbanner__title gradient">ПРЕИМУЩЕСТВА <br> КОМПОЗИТНОЙ ЧЕРЕПИЦЫ</div>
@@ -532,7 +532,7 @@
 					</div>
 				<div class="row">
 					<div class="col-12 d-flex justify-content-center margin_top100">
-						<button class="button buy accept">Загрузить Ещё</button>
+						<button class="b-topmenu-mobile__button button buy accept">Загрузить Ещё</button>
 					</div>
 				</div>	
 			</div>		
