--- a/app/text_news.html
+++ b/app/text_news.html
@@ -457,7 +457,7 @@
 		</div>
 		<div class="b-detail container">
 			<div class="row">
-				<div class="offset-md-1 col-9">
+				<div class="offset-lg-1 col-lg-9 col-md-12">
 					<div class="b-detail__text">
 						<p><strong>Компания Метротайл представляет уникальную новинку на российском кровельном рынке — композитную черепица в профиле ISlate. </strong></p>
 						<p>Новый профиль ISlate разработан на основе инновационных решений. Помимо неизменного качества бельгийского материала, профиль ISlate имеет форму и крепится ключом. Ключом называют соединение <br>по принципу Z образного замка, которое позволяет скреплять листы между собой. Это считается самым прочным и надежным креплением, которое делает кровлю единым целым покрытием. </p>
@@ -468,15 +468,15 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="offset-md-1 col-md-5">
+				<div class="offset-lg-1 col-lg-5 col-md-6">
 					<div class="text_news_img" style="background: url(../img/text_news.png) no-repeat"></div>
 				</div>
-				<div class="col-md-5">
+				<div class="col-lg-5 col-md-6">
 					<div class="text_news_img" style="background: url(../img/text_news2.png) no-repeat"></div>
 				</div>
 			</div>
 			<div class="row">
-				<div class="offset-md-1 col-8">
+				<div class="offset-lg-1 col-lg-8 col-md-12">
 					<div class="b-detail__text">
 						<h2 class="gradient text no_border">Уникальные преимущества профиля Metrotile iSlate:</h2>
 						<ul>
