--- a/app/text_publications.html
+++ b/app/text_publications.html
@@ -457,7 +457,7 @@
 		</div>
 		<div class="b-detail container">
 			<div class="row">
-				<div class="offset-md-1 col-9">
+				<div class="offset-lg-1 col-lg-9 col-md-12">
 					<div class="b-detail__text">
 						<p><strong>Да, композитная черепица стоит дороже, чем, другие аналоги кровельных материалов. Но ведь и преимущества композитной черепицы над конкурентами выглядят просто подавляющими. s</strong></p>
 						<p class="b-detail__gradient gradient_bg">Красивый дом это всегда повод для гордости хозяев. А одним из самых значимых элементов красоты любого здания, несомненно, является его кровля. Композитная черепица Metrotile придаст любому зданию красивый и, безо всякого сомнения, дорогой вид. Ведь недаром композитная черепица Metrotile присутствует на российском рынке под девизом «Ювелирная кровля».</p>
@@ -465,7 +465,7 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="offset-md-1 col-8">
+				<div class="offset-lg-1 col-lg-8 col-md-12">
 					<div class="b-detail__text">
 						<h2 class="gradient text no_border">Что же такое современная композитная черепица Metrotile и почему она стоит своих денег:</h2>
 						<ul>
