--- a/app/wheretobuy.html
+++ b/app/wheretobuy.html
@@ -448,11 +448,11 @@
 	</div>
 	<div class="container b-calc b-search">
 		<div class="row align-items-center">
-			<div class="offset-2 col-8">
+			<div class="offset-lg-2 col-lg-8">
 				<div class="b-search__input"><input class="b-calc__form-input" placeholder="Москва" type="text"></div>
 			</div>
-			<div class="col-1">
-				<div class="b-search__button button buy">найти</div>
+			<div class="col-lg-1 col-lg-2">
+				<div class="b-topmenu-mobile__button b-search__button button buy">найти</div>
 			</div>
 		</div>
 		<div class="row margin_top100">
@@ -590,7 +590,7 @@
 							</div>
 							<div class="b-catalog__item-desc">
 								<a class="b-catalog__item-link" href="#">MetroBond</a>
-								<span class="b-catalog__item-price">от 586</span>
+								<span class="b-catalog__item-price">от 586 <span class="ruble">₽</span></span>
 							</div>
 						</div>
 						<div class="b-catalog__item">
@@ -600,7 +600,7 @@
 							</div>
 							<div class="b-catalog__item-desc">
 								<a class="b-catalog__item-link" href="#">MetroBond</a>
-								<span class="b-catalog__item-price">от 586</span>
+								<span class="b-catalog__item-price">от 586 <span class="ruble">₽</span></span>
 							</div>
 						</div>
 						<div class="b-catalog__item">
@@ -610,7 +610,7 @@
 							</div>
 							<div class="b-catalog__item-desc">
 								<a class="b-catalog__item-link" href="#">MetroBond</a>
-								<span class="b-catalog__item-price">от 586</span>
+								<span class="b-catalog__item-price">от 586 <span class="ruble">₽</span></span>
 							</div>
 						</div>
 						<div class="b-catalog__item">
@@ -620,7 +620,7 @@
 							</div>
 							<div class="b-catalog__item-desc">
 								<a class="b-catalog__item-link" href="#">MetroBond</a>
-								<span class="b-catalog__item-price">от 586</span>
+								<span class="b-catalog__item-price">от 586 <span class="ruble">₽</span></span>
 							</div>
 						</div>
 					</div>
@@ -700,7 +700,7 @@
 					<p>Пришло время обустроить кровлю? Выбираете качественный и недорогой кровельный материал? Тогда вам нужно купить композитную черепицу Metrotile, и вы забудете о необходимости ремонта кровли. С Metrotile можно быстро и на века покрыть крышу дома, которому не страшны перепады температур и непогода!</p>
 					<p>В дилерских центрах профильные специалисты обучаются технологии монтажа композитной кровли по инструкциям производителя. После окончания учебы мастера проходят стажировку на крупных строительных объектах и только затем получают профессиональные сертификаты, являющиеся гарантией того, что укладка композитной черепицы будет выполнена на высоком профессиональном уровне.</p>
 					<h3>Мы предлагаем нашим покупателям:</h3>
-					<ul>
+					<ul class="diamond">
 						<li>10 коллекций.</li>
 						<li>25 цветовых решений.</li>
 						<li>Доборные материалы.</li>
