--- a/app/search.html
+++ b/app/search.html
@@ -427,7 +427,7 @@
                       <div class="b-search__input"><input class="b-calc__form-input" placeholder="Черепица" type="text"></div>
                     </div>
                     <div class="col-1">
-                      <div class="b-search__button button buy">найти</div>
+                      <div class="b-search__button b-topmenu-mobile__button button buy">найти</div>
                     </div>
                     <div class="b-topmenu__dropdown-close"></div>
                   </form>
@@ -448,15 +448,15 @@
 	</div>
 		<div class="container b-calc">
 		<div class="row align-items-center">
-			<div class="offset-2 col-8">
+			<div class="offset-lg-2 col-md-8">
 				<div class="b-search__input"><input class="b-calc__form-input" placeholder="Черепица" type="text"></div>
 			</div>
-			<div class="col-1">
-				<div class="b-search__button button buy">найти</div>
+			<div class="col-md-1">
+				<div class="b-search__button b-topmenu-mobile__button button buy">найти</div>
 			</div>
 		</div>
 		<div class="row margin_top100">
-			<div class="offset-1 col-10">
+			<div class="offset-lg-1 col-md-10">
 				<div class="b-search__container">
 					<a href="#" class="gradient text">MetroRoman</a>
 					<p class="b-search__container-text">
@@ -467,7 +467,7 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="offset-1 col-10">
+			<div class="offset-lg-1 col-md-10">
 				<div class="b-search__container">
 					<a href="#" class="gradient text">MetroViksen</a>
 					<p class="b-search__container-text">
@@ -480,7 +480,7 @@
 		</div>	
 		<div class="container">
 			<div class="row margin_top_gut">
-				<div class="offset-1 col-10">
+				<div class="offset-lg-1 col-md-10">
 				<div class="b-navigation">
 					<a href="#" class="b-navigation__prev"></a>
 					<a class="b-navigation__link cur" href="#">1</a>
